k8s/chairbnb/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chairbnb
spec:
  rules:
    - http:
        paths:
          - path: /api/v1/reservations/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: reservations
                port:
                  number: 8004
          - path: /api/v1/auth/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 8003
          - path: /api/v1/users/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-http
                port:
                  number: 8003
